Fix editor's hint popup positioning when widget is not fit into the page bounds

--- a/src/views/editors-hint.css
+++ b/src/views/editors-hint.css
@@ -1,6 +1,6 @@
 .discovery-view-editor-hints-popup {
     position: absolute;
-    z-index: 10;
+    z-index: 1000;
     overflow: hidden;
     list-style: none;
 
